<resources>
    <string name="app_name">LockLibrary</string>
    <string name="title_activity_lock_screen">LockScreenActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- Settings screen-->
    <string name="title_ad_features">AD Features : </string>
    <string name="title_video_on_ring">Video Ad on Ring</string>
    <string name="title_lock_ad">Lock Screen Ad</string>
    <string name="title_actionbar">Get paid to view ads</string>
    <string name="title_clickable_lost"><u>Lost</u></string>
    <string name="title_clickable_earned"><u>Earned</u></string>
    <string name="title_dashboard">Dash Board</string>
    <string name="title_ad_name">Ad Name</string>
    <string name="title_views">Views</string>
    <string name="title_earned">Earned\u20B9</string>
    <string name="title_lost">Lost\u20B9</string>
    <string name="title_missed">Missed</string>
    <string name="title_money_bag">\u20B9</string>
    <string name="title_views_left">Missed Views</string>
    <string name="title_money_left">Lost money</string>

    <!-- Register screen-->
    <string name="title_register">Register</string>

    <!-- custom progress dialog -->
    <string name="title_loading">Loading...</string>
    <string name="title_ok">OK</string>

    <!-- colors-->
    <color name="app_color">#922653</color>
    <color name="status_bar_color">#51152f</color>
    <string name="title_activity_register">RegisterActivity</string>






</resources>
