<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="flappjacks.locklibrary.SettingsActivity"
    android:background="@drawable/bg">

    <ProgressBar
        android:layout_width="wrap_content"
        android:indeterminate="true"
        android:id="@+id/marker_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linear_settings_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">


        <TextView android:text="@string/title_ad_features"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/app_color"
            android:textSize="@dimen/font_big"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:text="@string/title_video_on_ring"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/app_color"
            android:textSize="@dimen/font_big"
            android:layout_marginTop="5dp"/>
        <Switch
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="5dp"
            android:id="@+id/switch_settings_video"
            android:track="@drawable/toggle_bg"
            android:thumb="@drawable/toggle_background"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:text="@string/title_lock_ad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color"
                android:textSize="@dimen/font_big"
                android:layout_marginTop="5dp"
                android:layout_weight="3"/>
            <Switch
                android:id="@+id/switch_settings_lock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginTop="5dp"
                android:track="@drawable/toggle_bg"
                android:thumb="@drawable/toggle_background"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rel_money_bag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_settings_one"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/img_settings_money_bag"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_margin="0dp"
            android:src="@drawable/money_bag"
            android:scaleType="fitCenter"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/txt_settings_money_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_money_bag"
            android:textSize="@dimen/font_big"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginTop="15dp"/>

    </RelativeLayout>



    <LinearLayout
        android:layout_below="@id/rel_money_bag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_settings_two"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/title_dashboard"
            android:textStyle="bold"
            android:textColor="@color/app_color"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:id="@+id/txt_settings_lost_earned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/title_clickable_lost"
            android:textColor="@color/app_color"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <TableLayout
        android:id="@+id/table_settings_parent"
        android:layout_below="@+id/linear_settings_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_settings_back">

        <TableRow
            android:id="@+id/table_settings_row_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_color"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:padding="5dp">
            <TextView
                android:text="@string/title_ad_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#fff"
                android:textStyle="bold"
                android:background="@drawable/textlines"/>
            <TextView
                android:text="@string/title_views"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#fff"
                android:textStyle="bold"
                android:background="@drawable/textlines"/>
            <TextView
                android:text="@string/title_earned"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#fff"
                android:textStyle="bold"/>
        </TableRow>

    </TableLayout>


    <ImageView
        android:id="@+id/btn_settings_back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/back"
        android:layout_alignParentBottom="true"
        android:scaleType="fitCenter"
        android:layout_marginBottom="5dp"/>

</RelativeLayout>
